fixing spacing

--- a/style.scss
+++ b/style.scss
@@ -25,7 +25,7 @@ body {
 
 .container {
   margin: 0 auto;
-  max-width: 770px;
+  max-width: 765px;
   padding: 0 10px;
   width: 100%;
 }
